# RustTest

./: Cargo.toml  readme.md  secret.json
src/: main.rs
